# zkb

./: .gitignore  Cargo.toml  diesel.toml  zkb.db  zkb_run.sh  zkb_stop.sh
data/: 20190801.json  MoldenHeath.json  killmail.json  kills.json  links.txt  regions.json  systems.json
migrations/2019-09-11-121900_create_posts/: down.sql  up.sql
migrations/2019-10-04-101951_hashes/: down.sql  up.sql
migrations/2019-10-04-102000_killamils/: down.sql  up.sql
responses/: 79711960.html
sql/: append_dicts.sql  cleanup.sql  combatants.sql  createIdx.sql  dropIdx.sql  findObservatory.sql  fix_objects.sql  fix_tables.sql  observatories.sql  usefull.sql
src/: TODO.TXT  main.rs
src/lib/: api.rs  curl.rs  database.rs  killmail.rs  lib.rs  models.rs  schema.rs
src/lib/api/: alliance.rs  attacker.rs  character.rs  constellation.rs  corporation.rs  group.rs  gw.rs  item.rs  killmail.rs  mod.rs  names.rs  object.rs  order.rs  price.rs  region.rs  stargate.rs  stats.rs  system.rs  victim.rs  zkb.rs
src/lib/models/: attacker.rs  category.rs  constellation.rs  date.rs  item.rs  kill.rs  killdata.rs  killmail.rs  mod.rs  object.rs  observatory.rs  region.rs  schema.rs  stargate.rs  system.rs  victim.rs
src/lib/provider/: cache.rs  mod.rs  names.rs  prices.rs  route.rs  systems.rs
src/lib/reports/: alliance.rs  attacker.rs  character.rs  constellation.rs  corporation.rs  faction.rs  history.rs  item.rs  killmail.rs  mod.rs  names.rs  network.rs  region.rs  stargate.rs  system.rs  victim.rs
src/lib/services/: database.rs  mod.rs  monitor.rs  resolver.rs  saver.rs  server.rs
tools/: create_date.rs  gesheft.rs  get_url.rs  insert_date.rs  insert_kill.rs  load.rs  load_complete.rs  load_hashes.rs  load_killmail.rs  load_kills.rs  monitor.rs  navigator.rs  show_dates.rs  show_kills.rs  updater.rs
