[package]
name = "zkb"
version = "0.1.0"
authors = ["seb_odessa<seb_odessa@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "load"
path = "tools/load.rs"

[[bin]]
name = "updater"
path = "tools/updater.rs"

[[bin]]
name = "monitor"
path = "tools/monitor.rs"

[dependencies]
    serde = { version = "1.0", features = ["derive"]}
    serde_json = "*"
    diesel = {version = "1.4", features = ["sqlite", "chrono"]}
    diesel_codegen = "0.16"
    dotenv = "0.10"
    curl = "0.4"
    chrono = { version = "0.4", features = ["serde"]}
    crossbeam = "0.7"
    crossbeam-queue = "0.1"
    crossbeam-utils = "0.6"
    log = "0.4"
    env_logger = "0.7"
    separator = "0.4"
    lazy_static = "1.4"







