[package]
name = "zkb"
version = "0.6.2"
authors = ["seb<seb@ukr.net>"]
edition = "2018"

[lib]
name = "lib"
path = "src/lib/lib.rs"

#[[bin]]
#name = "load"
#path = "tools/load.rs"

#[[bin]]
#name = "monitor"
#path = "tools/monitor.rs"

#[[bin]]
#name = "updater"
#path = "tools/updater.rs"

#[[bin]]
#name = "navigator"
#path = "tools/navigator.rs"

#[[bin]]
#name = "gesheft"
#path = "tools/gesheft.rs"

[dependencies]
    serde = { version = "1.0", features = ["derive"]}
    serde_json = "1.0"
    diesel = {version = "1.4", features = ["sqlite", "chrono"]}
    diesel_codegen = "0.16"
    diesel_migrations = "1.4"
    dotenv = "0.10"
    curl = "0.4"
    chrono = { version = "0.4", features = ["serde"]}
    crossbeam = "0.7"
    crossbeam-queue = "0.2"
    crossbeam-utils = "0.7"
    log = "0.4"
    env_logger = "0.7"
    lazy_static = "1.4"
    actix-web = "1.0"
    actix-rt = "0.2"
    actix-files = "0.1"
    dns-lookup = "1.0"
    uuid = { version = "0.8", features = ["serde", "v4"] }
    separator = "0.4"













